hello world servlet

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,16 @@
 hs_err_pid*
 replay_pid*
 /PHPDatabaseProject/nbproject/private/
+/GitIntro/nbproject/private/
+/Week2/nbproject/private/
+/Project1/nbproject/private/
+/Project0/nbproject/private/
+/PHPDatabaseProject/nbproject/private/
+/Arrays/nbproject/private/
+/Functions/nbproject/private/
+/HelloWorld/nbproject/private/
+/HelloWorld/build/
+/Stocks/nbproject/private/
+/Stocks/build/
+/TwitterStart/nbproject/private/
+/TwitterStart/build/
